[package]
name = "dothtml-backend"
version = "0.0.0"
edition = "2021"

[lib]
name = "dothtml_backend"
path = "src/lib.rs"

[[bin]]
name = "dothtml-backend"
path = "src/main.rs"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9.1"
validator = { version = "0.16", features = ["derive"] }
base64 = "0.22.1"
webauthn-rs = "0.5.1"